Editando arquivo html

--- a/Curso-git-e-github/Exercício/index.html
+++ b/Curso-git-e-github/Exercício/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <title>Título da página</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <h1>Aqui vai um título</h1>
-    </body>
+<head>
+    <title>Fanpage de Gatinhos</title>
+    <meta charset="utf-8">
+</head>
+<body>
+    <h1>Perfil #catsoninstagram</h1><img src="Imagens/gato-preto-1666974144631_v2_3x4.jpg" />
+</body>
+
 </html>
